# fast_zero

./: pyproject.toml
fast_zero/: __init__.py  app.py
tests/: test_app.py
