[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
taskipy = "^1.12.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migration']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tools.taskipy.tasks]
run = 'fastapi dev fast_api/app.py'
test = 'pytest --cov=fast_api -vv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
